[package]
name = "computerhardwaredb"
version = "0.1.0"
edition = "2021"
authors = ["Christian Jaeger <ch@christianjaeger.ch>"]
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0.14"
thiserror = "1.0"
serde = { version = "1.0.154", features = ["derive"] }
serde_json= "1.0"
chrono = { version = "0.4.30", default-features = false, features = ["std", "alloc", "clock"] }
#chrono-tz = "0.5"
#lazy_static = "1.4.0"
#itertools = "0.10"
#sqlite = { version = "0.30", default-features = false, features = [] }
#clap = { version = "3", features = ["derive"] }
#strum = { version = "0.20", features = ["derive"] }
#strum_macros = { version = "0.20" }

#backtrace = "0.3"

[profile.dev]
panic = "abort"
# [profile.release]
# panic = "abort"
lto = "off"
# ^ does this help ?

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = 2


[profile.release]
# lto = false
# default anyway?
# lto = "off"
overflow-checks = true
